# mind-the-qapp

./: .flake8  CITATION.cff  CONTRIBUTING.md  README.md  fft4quantum..py  fft4quantum.ipynb  instructor.py  mfft.ipynb  noise-app.py  noise.ipynb  noisy-training-app.py  pyproject.toml  setup.cfg  vqc2coeff.py
.github/workflows/: quality.yml
app/: _noise-app.py  app.py  noise-app.py  noisy-training-app.py
app/assets/: style.css
app/layouts/: app_page_layout.py  expressibility_page_layout.py  main_page_layout.py  training_page_layout.py
app/pages/: 0-main-page.py  1-noise-viz.py  1-training.py  2-expressibility.py  2-noise-training.py  3-expressibility-viz.py
app/utils/: ansaetze.py  entangling.py  expressibility.py  instructor.py  validation.py
notebooks/: fft.ipynb  fft4quantum..py  noise.ipynb
vqe/: brute_forced_solutions.csv  circuit_utils.py  config.py  fourier_utils.py  main.py  qubo_utils.py  random_utils.py
