[tool.poetry]
name = "quantum-surrogate-project"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
plotly = "^5.18.0"
dash = "^2.16.1"
dash-bootstrap-components = "^1.5.0"
matplotlib = "^3.8.4"
qml-essentials = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
