[tool.poetry]
name = "quantum-surrogate-project"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
plotly = "^5.24.1"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
qml-essentials = "^0.1.16"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
licensecheck = "^2024.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
